--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: wangjunjie's Homepage
 page-top-title: wangjunjie
-top-section-bg-text: Be what you wanna be
+top-section-bg-text: 采九朵莲
 home-subtitle: Junjie wang&ensp;|&ensp;王俊杰
 copyright-text: '&copy; wangjunjie. All Rights Reserved.'
